# MusicMapMaker-Next

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GEMINI.md
3rdpty/: CMakeLists.txt
3rdpty/sources/: CMakeLists.txt
3rdpty/sources/cmake/: BuildGLFW.cmake  Buildimgui.cmake  GLFW.cmake  ImGuiFileDialog.cmake  IonCachyEngine.cmake  clay.cmake  curl.cmake  entt.cmake  freetype.cmake  glm.cmake  imgui.cmake  implot.cmake  luajit.cmake  lunasvg.cmake  nativefiledialog-extended.cmake  nlohmann_json.cmake  sol2.cmake  stb.cmake
Modules/Audio/: CMakeLists.txt
Modules/Audio/include/: TestAudioBackend.h
Modules/Audio/include/audio/: AudioManager.h  SoundEffectPool.h
Modules/Audio/src/: AudioManager.cpp  SoundEffectPool.cpp  TestAudioBackend.cpp
Modules/Config/: CMakeLists.txt
Modules/Config/include/: SkinConfig.h
Modules/Config/include/config/: AppConfig.h  EditorConfig.h  EditorSettings.h  ProjectConfig.h  VisualConfig.h
Modules/Config/include/config/skin/: SkinConfig.h
Modules/Config/include/config/skin/translation/: Translation.h
Modules/Config/include/config/translation/: Translation.h
Modules/Config/include/skin/: SkinConfig.h
Modules/Config/src/: AppConfig.cpp  SkinLoader.cpp
Modules/Config/src/skin/: SkinLoader.cpp
Modules/Config/src/skin/translation/: Translation.cpp
Modules/Config/src/translation/: Translation.cpp
Modules/Game/: CMakeLists.txt
Modules/Game/Canvas/: CMakeLists.txt
Modules/Game/Canvas/include/: CanvasDefs.h  TestCanvas.h  WindowContext.hpp
Modules/Game/Canvas/include/canvas/: Basic2DCanvas.h  Basic2DCanvasInteraction.h  PreviewCanvas.h  TestCanvas.h  TimelineCanvas.h
Modules/Game/Canvas/src/: Basic2DCanvas.cpp  Basic2DCanvas_Interaction.cpp  Basic2DCanvas_Rendering.cpp  PreviewCanvas.cpp  TestCanvas.cpp  TimelineCanvas.cpp  TimelineCanvas_Interaction.cpp  TimelineCanvas_Popups.cpp  obj.cpp
Modules/Game/Common/: CMakeLists.txt
Modules/Game/Common/include/common/: AudioInfoUtils.h  EditorConfig.h  LogicCommands.h
Modules/Game/Common/src/common/: AudioInfoUtils.cpp
Modules/Game/Graphic/: CMakeLists.txt
Modules/Game/Graphic/Font/: CMakeLists.txt
Modules/Game/Graphic/Font/include/: Text.h
Modules/Game/Graphic/Font/include/font/: Text.h
Modules/Game/Graphic/Font/src/: FontPool.cpp
Modules/Game/Graphic/include/graphic/: CursorManager.h
Modules/Game/Graphic/include/graphic/glfw/: GLFWHeader.h
Modules/Game/Graphic/include/graphic/imguivk/: IGraphicUserHook.h  VKContext.h  VKOffScreenRenderer.h  VKQueueFamilyDef.h  VKRenderPass.h  VKRenderPipeline.h  VKRenderer.h  VKShader.h  VKSwapchain.h  VKTexture.h  VKTextureAtlas.h
Modules/Game/Graphic/include/graphic/vk/: VKContext.h  VKQueueFamilyDef.h  VKRenderPass.h  VKRenderPipeline.h  VKRenderer.h  VKShader.h  VKSwapchain.h
Modules/Game/Graphic/include/ui/: CursorManager.h  IRenderableView.h  ISubView.h  ITextureLoader.h  IUIView.h  UIManager.h
Modules/Game/Graphic/include/ui/brush/: Brush.h
Modules/Game/Graphic/include/ui/imgui/: CLayoutTestUI.h  DebugWindowUI.h  FileManagerUI.h  FloatingManagerUI.h  ImguiTestWindowUI.h  ImguiTools.h  MainDockSpaceUI.h  SideBarUI.h
Modules/Game/Graphic/include/ui/layout/: CLayDefs.h  CLayWrapperCore.h
Modules/Game/Graphic/include/vk/: Device.h  Instance.h  VKContext.h  VKExtensions.h  VKRenderPipeline.h  VKRenderer.h  VKSwapchain.h
Modules/Game/Graphic/include/vk/mesh/: VKVertex.h
Modules/Game/Graphic/src/: CursorManager.cpp
Modules/Game/Graphic/src/glfw/: GLFWCallback.cpp  NativeWindow.cpp
Modules/Game/Graphic/src/glfw/adapters/: Win32WindowAdapter.cpp
Modules/Game/Graphic/src/imguivk/: VKOffScreenRenderer.cpp  VKOffScreenRendererRess.cpp  VKRenderPass.cpp  VKRenderPipeline.cpp  VKRenderer.cpp  VKRendererRender.cpp  VKRendererRess.cpp  VKShader.cpp  VKSwapchain.cpp  VKTexture.cpp  VKTextureAtlas.cpp
Modules/Game/Graphic/src/imguivk/context/: VKContext.cpp  VKContextDebugFeats.cpp  VKContextDevice.cpp  VKContextGLFW.cpp  VKContextImguiImpl.cpp  VKContextInfos.cpp
Modules/Game/Graphic/src/ui/: CursorManager.cpp  UIManager.cpp
Modules/Game/Graphic/src/vk/: Instance.cpp  VKContext.cpp  VKContextGLFW.cpp  VKRenderPass.cpp  VKRenderPipeline.cpp  VKRenderer.cpp  VKRendererRess.cpp  VKShader.cpp  VKSwapchain.cpp
Modules/Game/Logic/: CMakeLists.txt
Modules/Game/Logic/include/logic/: BeatmapSession.h  BeatmapSyncBuffer.h  EditorConfig.h  EditorEngine.h  LogicCommands.h  SyncClock.h
Modules/Game/Logic/src/logic/: BeatmapSession.cpp  BeatmapSyncBuffer.cpp  EditorEngine.cpp
Modules/Game/UI/: CMakeLists.txt
Modules/Game/UI/include/ui/: IRenderableView.h  ISubView.h  ITextureLoader.h  IUIView.h  Icons.h  UIManager.h
Modules/Game/UI/include/ui/brush/: Brush.h  (+1 more)
Modules/Game/UI/src/ui/: UIManager.cpp
Modules/Game/include/: GameLoop.h  GlobDefs.h
Modules/Game/include/game/: CrashHandler.h  GameLoop.h  GlobDefs.h
Modules/Game/src/: GameLoop.cpp
Modules/MMM/: CMakeLists.txt
Modules/MMM/include/mmm/: Metadata.h  SafeParse.h
Modules/MMM/include/mmm/beatmap/: BeatMap.h
Modules/MMM/include/mmm/note/: Flick.h  Hold.h  Polyline.h
Modules/MMM/include/mmm/project/: AudioResource.h  Project.h  ProjectSettings.h
Modules/MMM/include/mmm/timing/: Timing.h
Modules/MMM/src/beatmap/: BeatMap.cpp  LoadMMMMap.hpp  LoadMalodyMap.hpp  LoadOSUMap.hpp  LoadRMMap.hpp  SaveMMMMap.hpp  SaveMalodyMap.hpp  SaveOSUMap.hpp  SaveRMMap.hpp
Modules/MMM/src/note/: Hold.cpp  Note.cpp
Modules/MMM/src/timing/: Timing.cpp
Modules/MMM/tests/: FormatTestHelpers.hpp  IMDConsistencyTest.cpp  MalodyConsistencyTest.cpp  MalodyEdgeCaseTest.cpp  MapConsistencyTest.cpp  OSUConsistencyTest.cpp  TestHelper.hpp
Modules/MMM/tests/data/: [General]Unsan-musho.mc  [Polyline]Collision.mc
Modules/Main/: CMakeLists.txt
Modules/Main/src/: imgui_main_demo.cpp  main.cpp
Modules/Network/: CMakeLists.txt
Modules/Network/include/network/: UpdateChecker.h
Modules/Network/src/: UpdateChecker.cpp
Modules/Network/tests/: UpdateCheckerTest.cpp
Modules/Updater/: CMakeLists.txt  main.cpp
(+187 files in other folders)
